# ml-modelo

./: Ml-DLmodel.ipynb  pyproject.toml
Backend/: api.py  main.py
